--- a/src/main/resources/org/override/css/styles.css
+++ b/src/main/resources/org/override/css/styles.css
@@ -1,181 +1,61 @@
 * {
-    -blue: #007bff;
-    -indigo: #6610f2;
-    -purple: #6f42c1;
-    -pink: #e83e8c;
-    -red: #dc3545;
-    -orange: #fd7e14;
-    -yellow: #ffc107;
-    -green: #28a745;
-    -teal: #20c997;
-    -cyan: #17a2b8;
-    -white: #fff;
-    -gray: #6c757d;
-    -gray-dark: #343a40;
-    -primary: #007bff;
-    -secondary: #6c757d;
-    -success: #28a745;
-    -info: #17a2b8;
-    -warning: #ffc107;
-    -danger: #dc3545;
-    -light: #f8f9fa;
-    -dark: #343a40;
-    -breakpoint-xs: 0;
-    -breakpoint-sm: 576px;
-    -breakpoint-md: 768px;
-    -breakpoint-lg: 992px;
-    -breakpoint-xl: 1200px;
-    -font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    -font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    -bg-color: #282C34;
+
+    -text-color: #818181;
+    -text-color-active: #f1f1f1;
+
+    -danger-color: #c9302c;
+    -danger-dark-color: #ac2925;
+
+    -primary-color: #337ab7;
+    -primary-border-color: #2e6da4;
+    -primary-dark-color: #286090;
+
+    -success-color: #5cb85c;
+    -success-dark-color: #255625;
+
+    -info-color: #5bc0de;
+    -info-dark-color: #1b6d85;
+
+    -warning-color: #f0ad4e;
+    -warning-dark-color: #985f0d;
+
 }
 
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
-    -fx-display: block;
+.top-bar {
+    -fx-background-color: -bg-color;
+    -fx-border-color: -text-color;
+    -fx-border-width: 0 0 1 0;
+    -fx-row-valignment: center;
+    -fx-alignment: center-left;
 }
 
-hr {
-    fx-box-sizing: content-box;
-    fx-height: 0;
-    fx-overflow: visible;
+.navbar {
+    -fx-height: 100%;
+    -fx-position: fixed;
+    -fx-z-index: 1;
+    -fx-background-color: -bg-color;
+    -fx-padding-top: 20px;
 }
 
-#footer-section {
-    -fx-alignment: center;
-    -fx-padding: 5 10 5 10;
-    -fx-border-width: 1;
-    -fx-border-color: #E8E8E8 transparent transparent transparent;
-}
-
-.view-3 {
-    -fx-background-color: -teal;
-}
-
-.view-2 {
-    -fx-background-color: -red;
-}
-
-.view-1 {
-    -fx-background-color: -pink;
-}
-
-.btn {
-    -fx-font-weight: 400;
-    -fx-text-align: center;
-    -fx-vertical-align: middle;
-    -fx-text-fill: #212529;
-    -fx--webkit-user-select: none;
-    -fx-user-select: none;
-    -fx-background-color: transparent;
-    -fx-padding: 6px 12px;
-    -fx-border-width: 1;
-    -fx-border-color: transparent;
-    -fx-border-style: solid;
-    -fx-font-size: 16px;
-    -fx-line-height: 1.5;
-    -fx-border-radius: 0.25;
-    -fx-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-.btn:hover {
-    -fx-color: #212529;
+.nav-item {
+    -fx-padding: 6 6 6 20;
     -fx-text-decoration: none;
+    -fx-font-size: 16;
+    -fx-text-fill: -text-color;
+    -fx-display: block;
+    -fx-background-color: transparent;
+    -fx-min-width: 140;
 }
 
-.btn:focused, .btn.focus {
-    -fx-outline: 0;
-    -fx-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+.navbar > .nav-item.active {
+    -fx-text-fill: -text-color-active;
 }
 
-.btn.disabled, .btn:disabled {
-    -fx-opacity: 0.65;
+.nav-item:hover {
+    -fx-text-fill: -text-color-active;
 }
 
-.btn-primary {
-    -fx-text-fill: #fff;
-    -fx-background-color: #007bff;
-    -fx-border-color: #007bff;
-}
-
-.btn-primary:hover {
-    -fx-text-fill: #fff;
-    -fx-background-color: #0069d9;
-    -fx-border-color: #0062cc;
-}
-
-.btn-primary:focused, .btn-primary.focus {
-    -fx-box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-}
-
-.btn-primary.disabled, .btn-primary:disabled {
-    -fx-text-fill: #fff;
-    -fx-background-color: #007bff;
-    -fx-border-color: #007bff;
-}
-
-
-.btn-secondary {
-    -fx-text-fill: #fff;
-    -fx-background-color: #6c757d;
-    -fx-border-color: #6c757d;
-}
-
-.btn-secondary:hover {
-    -fx-text-fill: #fff;
-    -fx-background-color: #5a6268;
-    -fx-border-color: #545b62;
-}
-
-.btn-secondary:focused, .btn-secondary.focus {
-    -fx-box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
-}
-
-.btn-secondary.disabled, .btn-secondary:disabled {
-    -fx-text-fill: #fff;
-    -fx-background-color: #6c757d;
-    -fx-border-color: #6c757d;
-}
-
-
-.btn-success {
-    -fx-text-fill: #fff;
-    -fx-background-color: #28a745;
-    -fx-border-color: #28a745;
-}
-
-.btn-success:hover {
-    -fx-color: #fff;
-    -fx-background-color: #218838;
-    -fx-border-color: #1e7e34;
-}
-
-.btn-success:focused, .btn-success.focus {
-    -fx-box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5);
-}
-
-.btn-success.disabled, .btn-success:disabled {
-    -fx-color: #fff;
-    -fx-background-color: #28a745;
-    -fx-border-color: #28a745;
-}
-
-.btn-info {
-    -fx-color: #fff;
-    -fx-background-color: #17a2b8;
-    -fx-border-color: #17a2b8;
-}
-
-.btn-info:hover {
-    -fx-color: #fff;
-    -fx-background-color: #138496;
-    border-color: #117a8b;
-}
-
-.btn-info:focused, .btn-info.focus {
-    box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
-}
-
-.btn-info.disabled, .btn-info:disabled {
-    color: #fff;
-    background-color: #17a2b8;
-    border-color: #17a2b8;
+.text{
+    -fx-text-fill: -text-color;
 }
