--- a/src/main/resources/org/override/ranking.fxml
+++ b/src/main/resources/org/override/ranking.fxml
@@ -5,12 +5,13 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <?import javafx.scene.text.Text?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0"
-            styleClass="view-2"
+
+<BorderPane
+        prefHeight="400.0" prefWidth="600.0"
+        xmlns="http://javafx.com/javafx"
 >
-<Text> View 2</Text>
-</AnchorPane>
+    <center>
+        <Text>View 3</Text>
+    </center>
+</BorderPane>
