--- a/src/main/resources/org/override/view-score.fxml
+++ b/src/main/resources/org/override/view-score.fxml
@@ -2,15 +2,26 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.skin.TableHeaderRow?>
-<BorderPane prefHeight="400.0" prefWidth="600.0" styleClass="view-1" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1"
+<BorderPane prefHeight="400.0"
+            prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/11.0.2"
+            xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.override.controllers.ViewScoreController">
-    <Text>view 1</Text>
     <center>
-        <ScrollPane BorderPane.alignment="CENTER">
-            <VBox fx:id="vBoxResult"/>
-        </ScrollPane>
+        <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+            <Tab text="Thông tin cá nhân">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                    <GridPane fx:id="studentSummaryPane"/>
+                </AnchorPane>
+            </Tab>
+            <Tab text="Điểm">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                    <ScrollPane>
+                        <VBox fx:id="vBoxResult"/>
+                    </ScrollPane>
+                </AnchorPane>
+            </Tab>
+        </TabPane>
     </center>
 </BorderPane>
