--- a/src/main/resources/org/override/main-view.fxml
+++ b/src/main/resources/org/override/main-view.fxml
@@ -19,8 +19,8 @@
     <top>
         <HBox styleClass="panel-body, top-bar" spacing="5">
             <Label text="MSSV" styleClass="text"/>
-            <TextField text="hihi" minHeight="30"/>
-            <Button minHeight="30">
+            <TextField fx:id="studentIdTextField" minHeight="30"/>
+            <Button minHeight="30" onAction="#loadTermResult">
                 <graphic>
                     <ImageView fitWidth="20" fitHeight="20">
                         <Image url="@images/education/geography.png"/>
