--- a/src/main/resources/org/override/view-score.fxml
+++ b/src/main/resources/org/override/view-score.fxml
@@ -3,24 +3,25 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="400.0"
-            prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/11.0.2"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.override.controllers.ViewScoreController">
+<BorderPane
+        xmlns="http://javafx.com/javafx/11.0.2"
+        xmlns:fx="http://javafx.com/fxml/1"
+        fx:controller="org.override.controllers.ViewScoreController">
     <center>
-        <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+        <TabPane tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
             <Tab text="Thông tin cá nhân">
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                <AnchorPane prefHeight="180.0" prefWidth="200.0">
                     <GridPane fx:id="studentSummaryPane"/>
                 </AnchorPane>
             </Tab>
             <Tab text="Điểm">
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                    <ScrollPane>
-                        <VBox fx:id="vBoxResult"/>
-                    </ScrollPane>
-                </AnchorPane>
+                <BorderPane>
+                    <center>
+                        <ScrollPane vbarPolicy="ALWAYS">
+                            <VBox fx:id="vBoxResult"/>
+                        </ScrollPane>
+                    </center>
+                </BorderPane>
             </Tab>
         </TabPane>
     </center>
